<resources>
    <string name="app_name">Aysun Matematicas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cont_help">ContHelpActivity</string>
    <string name="tab_text_1">Ayuda</string>
    <string name="tab_text_2">Ayuda Nombre</string>
    <string name="title_activity_help">helpActivity</string>
    <string name="nombre">Nombre</string>
    <string name="textview">TextView</string>
    <string name="textpart1">TextPart1</string>
    <string name="buttonPart1">Button</string>
    <string name="buttonPart3">Button</string>
    <string name="buttonPart2">Button</string>
    <string name="textRes"></string>
    <string name="add_word">noDesc</string>
    <string name="hint_word">Delete?...</string>
    <string name="button_save">Delete</string>
    <string name="not_deleted">List not deleted.</string>
</resources>